--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "firebase": "^7.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^4.7.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "reactstrap": "^8.4.0"
+    "reactstrap": "^8.4.0",
+    "styled-components": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
